apps/coroot/coroot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coroot
  namespace: coroot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - coroot.platform.local
      secretName: platform-tls
  rules:
    - host: coroot.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coroot-coroot
                port:
                  number: 8080
